# llm

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: test.yml
examples/: advanced_tool_calling_example.rs  agent_builder_example.rs  anthropic_example.rs  anthropic_streaming_example.rs  anthropic_thinking_example.rs  anthropic_tool_calling_example.rs  anthropic_vision_example.rs  api_deepclaude_example.rs  api_example.rs  azure_openai_embedding_example.rs  azure_openai_example.rs  azure_openai_tool_calling_example.rs  chain_audio_text_example.rs  chain_example.rs  chain_logging_example.rs  cohere_example.rs  deepclaude_pipeline_example.rs  deepseek_example.rs  elevenlabs_stt_example.rs  elevenlabs_tts_example.rs  embedding_example.rs  evaluation_example.rs  evaluator_parallel_example.rs  google_embedding_example.rs  google_example.rs  google_image.rs  google_pdf.rs  google_streaming_example.rs  google_structured_output_example.rs  google_tool_calling_example.rs  google_tool_calling_simplified.rs  google_tool_debug.rs  groq_example.rs  huggingface_example.rs  json_schema_nested_example.rs  memory_example.rs  memory_share_example.rs  mistral_example.rs  model_listing_example.rs  multi_backend_example.rs  (+33 more)
src/: builder.rs  error.rs  lib.rs  resilient_llm.rs  secret_store.rs  validated_llm.rs
src/agent/: builder.rs  mcp.rs  mod.rs
src/api/: handlers.rs  mod.rs  types.rs
src/backends/: anthropic.rs  azure_openai.rs  cohere.rs  deepseek.rs  elevenlabs.rs  google.rs  groq.rs  huggingface.rs  mistral.rs  mod.rs  ollama.rs  openai.rs  openai_compatible.rs  openrouter.rs  phind.rs  xai.rs
src/chain/: mod.rs  multi.rs
src/chat/: mod.rs
src/completion/: mod.rs
src/embedding/: mod.rs
src/evaluator/: mod.rs  parallel.rs
src/memory/: chat_wrapper.rs  cond_macros.rs  mod.rs  shared_memory.rs  sliding_window.rs
src/models/: mod.rs
src/providers/: mod.rs  openai_compatible.rs
src/stt/: mod.rs
src/tts/: mod.rs
tests/: test_backends.rs
