[package]
name = "llm"
version = "1.0.9"
edition = "2021"
description = "A Rust library unifying multiple LLM backends."
license = "MIT"
authors = ["Tristan Granier <graniet75@gmail.com>"]
repository = "https://github.com/graniet/llm"
documentation = "https://docs.rs/llm"
homepage = "https://github.com/graniet/llm"

[features]
default = []
openai = []
anthropic = []
ollama = []
deepseek = []
xai = []
phind = []
google = []
groq = []
api = ["dep:axum", "dep:tokio", "dep:tower-http", "dep:uuid"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde_json = "1.0"
async-trait = "0.1"
axum = { version = "0.7", optional = true, features = ["json"] }
tokio = { version = "1.0", optional = true, features = ["rt", "macros", "rt-multi-thread"] }
tower-http = { version = "0.5", optional = true, features = ["cors"] }
uuid = { version = "1.0", optional = true, features = ["v4"] }
base64 = "0.22.1"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
